--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,9 @@ http {
     location / {
       root            html;
       index           index.html index.htm;
+
+      auth_basic "Restricted";
+      auth_basic_user_file /etc/nginx/.htpasswd;
     }
   }
 }
